tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_after_param_name_pure.objc3
module MisplacedQualifierAfterParamNamePure;

fn add(lhs pure: i32, rhs: i32) -> i32;

fn main() -> i32 {
  return 0;
}